--- a/index.html
+++ b/index.html
@@ -8,6 +8,35 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="left">
+        <img src="./snowboard.avif" alt="foto">
+        <div class="title">THE CREW</div>
+    </div>
+    <div class="right">
+        <h1>The biggest snowboard camp! </h1>
+        <div>Snowboard camp in the alps. Both for beginners and advanced. Sing up to find out more.</div>
+        <h2>Let's do this!</h2>
+        <form action="example.com/snowboard" method="post">
+            <label for="firstName">FIRST NAME</label>
+            <input type="text" id="firstName">
+                
+            <label for="lastName">LAST NAME</label>
+            <input type="text" id="lastName">
+
+            <label for="email">EMAIL</label>
+            <input type="email" id="email">
+
+            <label for="phoneNumber">PHONE NUMBER</label>
+            <input type="tel" id="phoneNumber">
+
+            <label for="password">PASSWORD</label>
+            <input type="password" id="password" required>
+
+            <label for="confirmPassword">CONFIRM PASSWORD</label>
+            <input type="password" id="confirmPassword" required>
+
+            <button type="submit">Creat account!</button>
+        </form>
+    </div>
 </body>
 </html>
