--- a/index.html
+++ b/index.html
@@ -9,33 +9,58 @@
 </head>
 <body>
     <div class="left">
-        <img src="./snowboard.avif" alt="foto">
         <div class="title">THE CREW</div>
+        <div class="credit">Photo by <u>Ethan Walsweer</u> on <u>Unsplash</u></div>
     </div>
     <div class="right">
-        <h1>The biggest snowboard camp! </h1>
-        <div>Snowboard camp in the alps. Both for beginners and advanced. Sing up to find out more.</div>
-        <h2>Let's do this!</h2>
         <form action="example.com/snowboard" method="post">
-            <label for="firstName">FIRST NAME</label>
-            <input type="text" id="firstName">
+            <div class="header">
+                <h1>The biggest snowboard camp! </h1>
+                <ul class="about">
+                    <li>Snowboard camp in the alps.</li>
+                    <li>Both for beginners and advanced.</li>
+                    <li>Sing up to find out more.</li>
+                </ul>
+            </div>
+            <div class="collectors">
+                <h2>Let's do this!</h2>
+                <div class="name">
+                    <div>
+                        <label for="firstName">FIRST NAME</label>
+                        <input type="text" id="firstName">
                 
-            <label for="lastName">LAST NAME</label>
-            <input type="text" id="lastName">
-
-            <label for="email">EMAIL</label>
-            <input type="email" id="email">
-
-            <label for="phoneNumber">PHONE NUMBER</label>
-            <input type="tel" id="phoneNumber">
-
-            <label for="password">PASSWORD</label>
-            <input type="password" id="password" required>
-
-            <label for="confirmPassword">CONFIRM PASSWORD</label>
-            <input type="password" id="confirmPassword" required>
-
-            <button type="submit">Creat account!</button>
+                    </div>
+                    <div>
+                        <label for="lastName">LAST NAME</label>
+                        <input type="text" id="lastName">
+                    </div>
+                </div>
+                <div class="data">
+                    <div>
+                        <label for="email">EMAIL</label>
+                        <input type="email" id="email">
+                
+                    </div>
+                    <div>
+                        <label for="phoneNumber">PHONE NUMBER</label>
+                        <input type="tel" id="phoneNumber">
+                    </div>
+                </div>
+                <div class="passwords">
+                    <div>
+                        <label for="password">PASSWORD</label>
+                        <input type="password" id="password" required>
+                    </div>
+                    <div>
+                        <label for="confirmPassword">CONFIRM PASSWORD</label>
+                        <input type="password" id="confirmPassword" required>
+                    </div>
+                </div>
+            </div>
+            <div class="footer">
+                <button type="submit">Creat Account!</button>
+                <div class="log-in">Already have an account? <strong><a href=https://gfycat.com/agedsophisticatedcatbird>Log in</a></strong></div>
+            </div>
         </form>
     </div>
 </body>
